[package]
name = "fuel_line"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A fast template to string macro."
readme = "README.md"
license = "MIT"
documentation = "https://github.com/trezm/fuel-line"
homepage = "https://github.com/trezm/fuel-line"
repository = "https://github.com/trezm/fuel-line"


[dependencies]
bytes = "0.4"
fuel_line_derive = { version = "0.1", path = "../fuel_line_derive" }
uuid = { version = "0.6", features = ["v4"] }
