[package]
name = "fuel_line_derive"
version = "0.1.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A fast template to string macro."
readme = "README.md"
license = "MIT"
documentation = "https://github.com/trezm/fuel-line"
homepage = "https://github.com/trezm/fuel-line"
repository = "https://github.com/trezm/fuel-line"


[lib]
proc-macro = true

[dependencies]
syn = "0.13.1"
quote = "0.5.1"
proc-macro2 = "0.3.5"
